--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HomosaurusSite</title>
+  <title>Homosaurus Vocabulary Site</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <%= link_to "homosaurus.org", '/', class: "navbar-brand"%>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Home", '/' %></li>
+        <li><%= link_to "Vocabulary", vocabs_path %></li>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
 
-<%= yield %>
+<div class="container-full" style="margin-top:50px;">
+  <div class="container">
+    <div class="starter-template">
+      <% flash.each do |key, value| %>
+          <%= content_tag :div, value, class: "flash #{key}" %>
+      <% end %>
+      <%= yield %>
+    </div>
+  </div><!-- /.container -->
+</div>
+<div class="footer" style="margin-top:50px; width:100%; color:white; background-color: #000000;">
+  <div class="container">
+    homosaurus.org is a linked data service, maintained by the <%= link_to("College of the Holy Cross", "http://www.holycross.edu") %>
+  </div>
+</div>
 
 </body>
 </html>
