Added support for other formats and fixed the hierarchy links

--- a/app/views/vocabs/index.html.erb
+++ b/app/views/vocabs/index.html.erb
@@ -8,3 +8,6 @@
       </li>
   <% end %>
 </ul>
+
+<p><br/><strong>Other Formats:</strong> <%= link_to "N-Triples", request.original_url + '.nt'  %>, <%= link_to "JSON-LD", request.original_url + '.jsonld' %>, <%= link_to "TTL", request.original_url + '.ttl' %>
+
