--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,15 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", '/' %></li>
         <li><%= link_to "Vocabulary", vocabs_path %></li>
+        <li><%= link_to "Search", search_results_path %></li>
       </ul>
+
     </div><!--/.nav-collapse -->
+    <div>
+
+    </div>
   </div>
+
 </nav>
 
 <div class="container-full" style="margin-top:50px;">
@@ -33,6 +39,11 @@
 </div>
 <div class="footer" style="margin-top:50px; width:100%; color:white; background-color: #000000;">
   <div class="container">
+
+
+
+
+
     homosaurus.org is a linked data service, maintained by the <%= link_to("College of the Holy Cross", "http://www.holycross.edu") %>
   </div>
 </div>
