--- a/app/assets/stylesheets/homosaurus.css.scss
+++ b/app/assets/stylesheets/homosaurus.css.scss
@@ -39,3 +39,7 @@
 .panel-danger a:active {
   color: #337ab7;
 }
+
+.footer a{color:#9d9d9d}
+.footer a:focus{color:#fff;background-color:transparent}
+.footer a:hover{color:#fff;background-color:transparent}
