--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,11 +40,8 @@
 <div class="footer" style="margin-top:50px; width:100%; color:white; background-color: #000000;">
   <div class="container">
 
-
-
-
-
-    homosaurus.org is a linked data service, maintained by the <%= link_to("College of the Holy Cross", "http://www.holycross.edu") %>
+    Homosaurus.org is a linked data service, maintained by the <%= link_to("College of the Holy Cross", "http://www.holycross.edu") %>. <br />
+    For questions or inquiries, please use the Digital Transgender Archive contact form at: <%= link_to("Contact Us", "https://www.digitaltransgenderarchive.net/feedback") %>.
   </div>
 </div>
 
