Added in the V2 vocabulary path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,13 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", '/' %></li>
         <li><%= link_to "Vocabulary", vocabs_path %></li>
-        <li><%= link_to "Search", search_results_path %></li>
+        <% if request.original_url.include? '/v2' %>
+            <li><%= link_to "Search", search_results_v2_path %></li>
+        <% else %>
+
+            <li><%= link_to "Search", search_results_path %></li>
+        <% end %>
+
       </ul>
 
     </div><!--/.nav-collapse -->
