first step of performing an upgrade

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
   <div class="container">
 
     Homosaurus.org is a linked data service, maintained by the <%= link_to("College of the Holy Cross", "http://www.holycross.edu") %>. <br />
-    For questions or inquiries, please use the Digital Transgender Archive contact form at: <%= link_to("Contact Us", "https://www.digitaltransgenderarchive.net/feedback") %>.
+    For questions or inquiries, please use the Digital Transgender Archive contact form at: <%= link_to("Contact Us", "https://www.digitaltransgenderarchive.net/contact") %>.
   </div>
 </div>
 
