--- a/app/views/vocabs/show.html.erb
+++ b/app/views/vocabs/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @homosaurus.prefLabel %> (http://homosaurus.org/terms/<%= @homosaurus.identifier %>)</h2>
+<h2><%= @homosaurus["prefLabel_tesim"] %> (http://homosaurus.org/terms/<%= @homosaurus["id"] %>)</h2>
 
 <p><div style="clear:both;">
   <% if params[:from_q].present? %>
