--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,5 +1,6 @@
-
+<h1 style="font-size: 28px;"><span style="color:red">Notice:</span> Site is undergoing an upgrade and will be temporarily unavailable until Thursday.
+If you require immediate assistance, please use the contact us link to see if we can get a workaround up sooner.</h1>
 <h1>Homosaurus.org linked data vocabulary</h1>
 <p>This is an International Thesaurus of Lesbian, Gay, Bisexual and Transgender Index Terms that is currently used by https://www.digitaltransgenderarchive.net.</p>
 
-<p>This vocabulary was originally a project of the International Homo/Lesbian Informatiecentre & Archives and compiled by Jack van der Wel (with support of Ellen Greenblatt) in 2013. That offline document has been transcrabed into the Linked Data provider under development here.</p>
+<p>This vocabulary was originally a project of the International Homo/Lesbian Informatiecentre & Archives and compiled by Jack van der Wel (with support of Ellen Greenblatt) in 2013. That offline document has been transcribed into the Linked Data provider under development here.</p>
