Update what it says on V1 index and fix the full list in other download types

--- a/app/views/vocabs/index.html.erb
+++ b/app/views/vocabs/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Homosaurus Vocabulary Terms</h1>
 
-<h4>Current Term List</h4>
+<h4>V1 Term List</h4>
 <ul>
   <% @terms.each do |term| %>
       <li>
