Add in the logo and fix nav on mobile

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,6 +1,11 @@
-<h1>Homosaurus.org linked data vocabulary</h1>
-<p>This is an International Thesaurus of Lesbian, Gay, Bisexual and Transgender Index Terms that is currently used by https://www.digitaltransgenderarchive.net.</p>
+
+<div class="col-sm-12 col-md-12">
+  <%= image_tag("homosaurus_logo_max", class: 'logo') %>
+</div>
+<div class="well col-sm-12 col-md-12 homepage_info">
+<p>This is an International Thesaurus of Lesbian, Gay, Bisexual and Transgender Index Terms that is currently used by <%= link_to "https://www.digitaltransgenderarchive.net", "https://www.digitaltransgenderarchive.net" %>.</p>
 
 <p>This vocabulary was originally a project of the International Homo/Lesbian Informatiecentre & Archives and compiled by Jack van der Wel (with support of Ellen Greenblatt) in 2013. That offline document has been transcribed into the Linked Data provider under development here.</p>
 
 <p>This vocabulary was recently updated to "v2". For the original version of this vocabulary, please visit: <%= link_to "Original V1 Vocabulary", vocabs_path %></p>
+</div>
