--- a/app/assets/stylesheets/homosaurus.css.scss
+++ b/app/assets/stylesheets/homosaurus.css.scss
@@ -40,6 +40,22 @@
   color: #337ab7;
 }
 
+img.logo {
+  max-width: 100%;
+  max-height: 100%;
+  margin-top: 40px;
+}
+
+div.homepage_info {
+  margin-top: 40px;
+  h1 {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+
+}
+
 .footer a{color:#9d9d9d}
 .footer a:focus{color:#fff;background-color:transparent}
 .footer a:hover{color:#fff;background-color:transparent}
