Initial website copy update

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -3,9 +3,7 @@
   <%= image_tag("homosaurus_logo_max", class: 'logo') %>
 </div>
 <div class="well col-sm-12 col-md-12 homepage_info">
-<p>This is an International Thesaurus of Lesbian, Gay, Bisexual and Transgender Index Terms that is currently used by <%= link_to "https://www.digitaltransgenderarchive.net", "https://www.digitaltransgenderarchive.net" %>.</p>
+  <p>Welcome to the Homosaurus! The Homosaurus is an international linked data vocabulary of Lesbian, Gay, Bisexual, Transgender, and Queer (LGBTQ) terms. This vocabulary is intended to function as a companion to broad subject term vocabularies, such as the Library of Congress Subject Headings. Libraries, archives, museums, and other institutions are encouraged to use the Homosaurus to support LGBTQ research by enhancing the discoverability of their LGBTQ resources.</p>
 
-<p>This vocabulary was originally a project of the International Homo/Lesbian Informatiecentre & Archives and compiled by Jack van der Wel (with support of Ellen Greenblatt) in 2013. That offline document has been transcribed into the Linked Data provider under development here.</p>
-
-<p>This vocabulary was recently updated to "v2". For the original version of this vocabulary, please visit: <%= link_to "Original V1 Vocabulary", vocabs_path %></p>
+  <p>If you are using the Homosaurus, we want to hear from you! Please <%= link_to "contact us", contact_path %> to let us know how you are using this vocabulary and share any feedback you might have. </p>
 </div>
