Update about section. Add Google Analytics code. Add Contact Us form.

--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -67,6 +67,25 @@
       <td>
         <div class="media">
           <div class="media-left">
+            <%= image_tag("about/about_clair_kronk.jpg", class: 'hidden-xs') %>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">
+              Clair Kronk
+            </h4>
+            <p>
+              Clair Kronk is a PhD student in biomedical informatics at the University of Cincinnati Medical School. Her current work focuses on LGBTQIA+ language use in healthcare settings and on transgender health outcomes. Clair previously graduated with a bachelor degree in bioinformatics from the University of Pittsburgh and has partnered with the Max-Planck-Institute (MPI) for Developmental Biology and the Air Force Research Laboratory (AFRL) on multiple occasions. She can be reached at kronkcj @ mail.uc.edu.
+            </p>
+          </div>
+        </div>
+      </td>
+    </tr>
+
+    <tr>
+      <td>&nbsp;</td>
+      <td>
+        <div class="media">
+          <div class="media-left">
             <%= image_tag("about/about_chloe_noland.jpg", class: 'hidden-xs') %>
           </div>
           <div class="media-body">
