--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="col-sm-12 col-md-12">
-  <%= image_tag("homosaurus_logo_max", class: 'logo') %>
+  <%= image_tag("homosaurus_logo_max.png", class: 'logo') %>
 </div>
 <div class="well col-sm-12 col-md-12 homepage_info">
   <p>Welcome to the Homosaurus! The Homosaurus is an international linked data vocabulary of Lesbian, Gay, Bisexual, Transgender, and Queer (LGBTQ) terms. This vocabulary is intended to function as a companion to broad subject term vocabularies, such as the Library of Congress Subject Headings. Libraries, archives, museums, and other institutions are encouraged to use the Homosaurus to support LGBTQ research by enhancing the discoverability of their LGBTQ resources.</p>
