--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>Homosaurus Vocabulary Site</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <!-- Google Analytics -->
+  <%= render partial: '/ga', formats: [:html] %>
   <%= csrf_meta_tags %>
 </head>
 <body>
